--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       self.fetch = null;
     </script>
     <script src="http://localhost:3000/webpack-dev-server.js"></script>
+    <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
